classDiagram

    class AbstractInterface~TypeGet, TypePost, TypePut~ {
        List~TypeGet~ List()
        TypeGet Post(TypePost data)
        TypeGet Get(string id)
        TypeGet Put(string id, TypePut data)
        TypeGet Delete(string id)
    }

    class UsersInterface {
        List~UserGet~ List()
        UserGet Post(UserPost data)
        UserGet Get(string id)
        UserGet Put(string id, UserPut data)
        UserGet Delete(string id)
    }

    class IssuesInterface {
        List~IssueGet~ List()
        IssueGet Post(IssuePost data)
        IssueGet Get(string id)
        IssueGet Put(string id, IssuePut data)
        IssueGet Delete(string id)
    }

    class CommentsInterface {
        List~CommentGet~ List()
        CommentGet Post(CommentPost data)
        CommentGet Get(string id)
        CommentGet Put(string id, CommentPut data)
        CommentGet Delete(string id)
    }
    
    AbstractInterface <|-- UsersInterface : UserGet, UserPost, UserPut
    AbstractInterface <|-- IssuesInterface : IssueGet, IssuePost, IssuePut
    AbstractInterface <|-- CommentsInterface : CommentGet, CommentPost, CommentPut